--- a/index.html
+++ b/index.html
@@ -1,15 +1,33 @@
 
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <script src="js/jquery-3.4.1.js"></script>
-    <script src="js/scripts.js"></script>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
+<head>
+  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <script src="js/jquery-3.4.1.js"></script>
+  <script src="js/scripts.js"></script>
+  <meta charset="utf-8">
+  <title></title>
+</head>
+<body>
+  <div class="container">
 
-  </body>
+
+    <div class='card'>
+    <form id="task-input">
+      <div class="form-group">
+        <label for="thingsToDoInput"><h2>Things To Do</h2></label>
+        <input type="text" class="form-control" id="task">
+      </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+
+
+    <ul id="task-list">
+
+
+    </ul>
+</div>
+  </div>
+</body>
 </html>
